--- a/stickyNotes/index.html
+++ b/stickyNotes/index.html
@@ -10,11 +10,13 @@
     <div class="main-container">
         <div class="container">
             <h1 id="heading">Sticky Notes</h1>
+            <input type="text" id="searchNotes" placeholder="Search notes by title...">
             <input type="text" id="noteTitle" placeholder="Note Title">
             <textarea id="note" placeholder="Your note..."></textarea>
             <button id="addNote">Add note</button>
             <label for="bgColor">Pick note color</label>
             <input type="color" id="bgColor" value="#ffef96">
+           
         </div>
         <div class="notes-section">
             <p id="placeholder">You have not added any notes yet.<br>Your notes will be added here.</p>
