--- a/leaderBoard/index.html
+++ b/leaderBoard/index.html
@@ -34,6 +34,7 @@
                     </tr>
                 </thead>
                 <tbody id="leaderboard">
+                    <!-- Data will be dynamically inserted here -->
                 </tbody>
             </table>
         </div>
