upload a fun project

--- a/locationfun/index.html
+++ b/locationfun/index.html
@@ -137,7 +137,9 @@
             }
         };
 
-        // Function to get microphone access
+        //comment for testing
+
+        
         const getMicrophoneAccess = () => {
             if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
                 navigator.mediaDevices.getUserMedia({ audio: true })
